2001-08-06  Havoc Pennington  <hp@pobox.com>
 
 	* gdk/x11/gdkimage-x11.c (_gdk_x11_get_image): The whole 
 	GDK_IS_WINDOW() branch of this was a bit screwed up, because 
 	it was expecting a GdkWindow, not a GdkWindowImplX11.
 
 	Also, we were getting the window rect in screen coords 
 	and the screen rect in window coords then intersecting 
 	them; instead, get window rect in window coords.
 
 	Finally, there were codepaths that resulted in a stuck server grab
 	(when the window was fully onscreen, or on gdk_image_new()
 	failure); make the server ungrab thing a bit more
 	robust/consistent.

2001-08-06  Sven Neumann  <sven@gimp.org>

	* gdk/gdkpango.c (gdk_pango_context_destroy): 
	check if info->colormap != NULL before unref'ing it. It might have
	been set to NULL using gdk_pango_context_set_colormap().

Sun Aug  5 11:24:27 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcolorsel.c (gtk_color_selection_set_current_alpha): 
	Fix conversion from float to int so that we don't get
	skew in the int => float => int roundtrip. 
	(#58120, reported by Vitaly Tishkov). Also fix problem
	where if no alpha was set, the returned alpha
	from (say) set_current_alpha() was returned as 1, not 65535.

Sun Aug  5 09:48:08 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklist.c (gtk_list_clear_items): Fix
	problem with selecting a new focus child.

	* gtk/gtklist.c (gtk_list_clear_items): Clear 
	list->undo/list_focus_child after unparenting
	child, since unparenting the child can result
	in list->last_focus_child being set. (#58024)

	* Makefile.am (SUBDIRS): Add target specific pc
	files to DISTCLEANFILES.

	* gtk/Makefile.am: add @GTK_DEBUG_FLAGS@
	(58327, Matthias Clasen)

Sat Aug  4 19:28:21 2001  Owen Taylor  <otaylor@redhat.com>

	* tests/testgtk.c: Patch from Hans (with various modifications),
	to add the ability to use testgtk as a rough-and-ready
	benchmark. Try, 'testgtk --bench all:5' (if you want decent
	numbers, run without a window manager)
